Assertion failed: assert(is_loaded() && field->holder()->is_loaded() && klass()->is_subclass_of (field->holder())) failed: invalid access

XMLWordPrintable

    • b49
    • Not verified

        The following assertion failed when running many of the default method tests:

        # Internal Error (C:\re\jdk8\5205\hotspot\src\share\vm\ci\ciInstance.cpp:66), pid=6692, tid=13896
        # assert(is_loaded() && field->holder()->is_loaded() && klass()->is_subclass_of (field->holder())) failed: invalid access

        01 054dece8 07d17ee4 jvm!report_vm_error+0x45 [c:\re\jdk8\5205\hotspot\src\share\vm\utilities\debug.cpp @ 223]
        02 054ded20 080f2fb7 jvm!ciInstance::field_value+0x64 [c:\re\jdk8\5205\hotspot\src\share\vm\ci\ciinstance.cpp @ 66]
        03 054ded38 080fccf6 jvm!ciField::constant_value_of+0x97 [c:\re\jdk8\5205\hotspot\src\share\vm\ci\cifield.hpp @ 156]
        04 054ded88 08101a99 jvm!GraphBuilder::access_field+0x566 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 1590]
        05 054deef0 08102248 jvm!GraphBuilder::iterate_bytecodes_for_block+0x1679 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2685]
        06 054def0c 081032ce jvm!GraphBuilder::iterate_all_blocks+0x28 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2759]
        07 054def38 081035b7 jvm!GraphBuilder::try_inline_full+0x81e [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3851]
        08 054def5c 080ffce4 jvm!GraphBuilder::try_inline+0x167 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3238]
        09 054defac 08101aa6 jvm!GraphBuilder::invoke+0x7a4 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 1864]
        0a 054df114 08102248 jvm!GraphBuilder::iterate_bytecodes_for_block+0x1686 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2690]
        0b 054df130 081032ce jvm!GraphBuilder::iterate_all_blocks+0x28 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2759]
        0c 054df15c 081035b7 jvm!GraphBuilder::try_inline_full+0x81e [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3851]
        0d 054df180 080ffce4 jvm!GraphBuilder::try_inline+0x167 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3238]
        0e 054df1d0 08101aa6 jvm!GraphBuilder::invoke+0x7a4 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 1864]
        0f 054df338 08102248 jvm!GraphBuilder::iterate_bytecodes_for_block+0x1686 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2690]
        10 054df354 081032ce jvm!GraphBuilder::iterate_all_blocks+0x28 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2759]
        11 054df380 081035b7 jvm!GraphBuilder::try_inline_full+0x81e [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3851]
        12 054df3a4 080ffce4 jvm!GraphBuilder::try_inline+0x167 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3238]
        13 054df3f4 08101aa6 jvm!GraphBuilder::invoke+0x7a4 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 1864]
        14 054df55c 08102939 jvm!GraphBuilder::iterate_bytecodes_for_block+0x1686 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 2690]
        15 054df628 0810edc4 jvm!GraphBuilder::GraphBuilder+0x4c9 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_graphbuilder.cpp @ 3130]
        16 054df678 0810ee55 jvm!IRScope::IRScope+0x1c4 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_ir.cpp @ 157]
        17 054df6a0 080ed66b jvm!IR::IR+0x55 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_ir.cpp @ 239]
        18 054df704 080edaae jvm!Compilation::build_hir+0x7b [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_compilation.cpp @ 144]
        19 054df744 080edc37 jvm!Compilation::compile_java_method+0xfe [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_compilation.cpp @ 376]
        1a 054df784 080ede1c jvm!Compilation::compile_method+0x67 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_compilation.cpp @ 449]
        1b 054df7c8 080ee0c5 jvm!Compilation::Compilation+0x16c [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_compilation.cpp @ 556]
        1c 054df990 07d96fc7 jvm!Compiler::compile_method+0x75 [c:\re\jdk8\5205\hotspot\src\share\vm\c1\c1_compiler.cpp @ 123]
        1d 054dfaf8 07d97873 jvm!CompileBroker::invoke_compiler_on_method+0x387 [c:\re\jdk8\5205\hotspot\src\share\vm\compiler\compilebroker.cpp @ 1810]
        1e 054dfb90 07f3e5d0 jvm!CompileBroker::compiler_thread_loop+0x3a3 [c:\re\jdk8\5205\hotspot\src\share\vm\compiler\compilebroker.cpp @ 1631]
        1f 054dfbdc 07f3f0c0 jvm!JavaThread::thread_main_inner+0x110 [c:\re\jdk8\5205\hotspot\src\share\vm\runtime\thread.cpp @ 1689]
        20 054dfc18 07f9ce81 jvm!JavaThread::run+0x170 [c:\re\jdk8\5205\hotspot\src\share\vm\runtime\thread.cpp @ 1669]
        21 054dfed0 6a510fac jvm!java_start+0xb1 [c:\re\jdk8\5205\hotspot\src\os\windows\vm\os_windows.cpp @ 431]

        Reproes with jdk8 b100 using:
        java -cp classes -client -Xcomp vm.runtime.defmeth.AccessibilityFlagsTest -ver 52 -flags 0 -mode invoke

        asserts with fastdebug and crashes with product builds.

        ILW = HLH -> P2
        I: High, asserts or crashes
        L: Low, seems isolated to default method tests
        W: ? (High)

              Assignee:
              Rickard Backman (Inactive)
              Reporter:
              Christian Tornqvist
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

                Created:
                Updated:
                Resolved: